--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block main %}
-  
+  <h1 class="center">Home</h1>
+  <p class="indent">
+    Hello, world. My name is Tyler McGraw and this is my home page. A bit about me - I was born and raised in Silicon Valley and graduated from Washington University in St. Louis in 2020 with a major in Philosophy - Neuroscience - Psychology and a minor in Computer Science. I was set to obtain my Doctorate in Physical Therapy from Washington University but after a change of heart I've begun reimmersing myself in the field of computer science. In my free time I enjoy lifting heavy things, watching NBA and Sumo wrestling, and reading books and blogs.
+  </p>
+  <p class="indent">
+    On this site you can expect to find my blog, dashboard, and a collection of projects I have worked on. The blog doesn't focus on a specific topic, I will write about things that I've been thinking about/interest me. I find that thoughts that exist solely in my mind are not as well articulated as I think they are, so I will take a Montaigne-esque approach of writing essais (attempts) rather than proofs. The dashboard is mostly for personal use but I have made parts of it public. The projects section is self-explanatory and self-referential.
+  </p>
 {% endblock %}
