--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,12 +38,17 @@
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link Github" href="https://github.com/tylermcgraw/">
-            <img id="github-img" src="static/github_logo.png" alt="github link and image">
+            <img id="github-img" src="static/github-logo.png" alt="github link and image">
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Blog" href="mailto:tyler.a.mcgraw@gmail.com">
-            <img id="email-img" src="static/email_icon.jpg" alt="email link and image">
+          <a class="nav-link Email" href="mailto:tyler.a.mcgraw@gmail.com">
+            <img id="email-img" src="static/email-icon.jpg" alt="email link and image">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link LinkedIn" href="https://www.linkedin.com/in/tyler-mcgraw-91a709128/">
+            <img id="linkedin-img" src="static/linkedin-logo.png" alt="linkedin link and image">
           </a>
         </li>
       </ul>
