--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,5 +5,42 @@
 {% endblock %}
 
 {% block main %}
-  
+  <div class="card-group">
+    <div class="card">
+      <a href="/">
+        <img src="/static/website.PNG" class="card-img-top" alt="...">
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Personal Website</h5>
+        <p class="card-text">A web application for personal use and connecting with the world. Tools used: Python, Flask, SQL, HTML, CSS, Javascript, Git, Github, Windows Subsystem for Linux</p>
+      </div>
+    </div>
+    <div class="card">
+      <a href="https://tylermcgraw.github.io/calculator/">
+        <img src="/static/calculator.PNG" class="card-img-top" alt="calculator web page project">
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Calculator</h5>
+        <p class="card-text">A simple calculator. Tools used: HTML, CSS, Javascript, Git, Github, Linux, Oracle VM</p>
+      </div>
+    </div>
+    <div class="card">
+      <a href="https://tylermcgraw.github.io/library/">
+        <img src="/static/library.PNG" class="card-img-top" alt="library web page project">
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Library</h5>
+        <p class="card-text">A dynamic library application that uses local storage to create a list of books. Tools used: HTML, CSS, Javascript, Git, Github, Linux, Oracle VM</p>
+      </div>
+    </div>
+    <div class="card">
+      <a href="https://tylermcgraw.github.io/etch-a-sketch/">
+        <img src="/static/etch-a-sketch.PNG" class="card-img-top" alt="etch-a-sketch web page project">
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Etch-a-Sketch</h5>
+        <p class="card-text">An interactive etch-a-sketch web page. Tools used: HTML, CSS, Javascript, Git, Github, Linux, Oracle VM</p>
+      </div>
+    </div>
+  </div>
 {% endblock %}
