--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -4,14 +4,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <!-- bootstrap -->
+    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link href="/static/styles.css" rel="stylesheet">
-    <link href="/static/headshot.jpg" rel="icon">
-    <link href="/static/styles.css" rel="stylesheet">
-    <script src="/static/main.js"></script>
+    <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='headshot.jpg') }}" rel="icon">
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
     <title>Tyler McGraw - {% block title %}{% endblock %}</title>
   </head>
   <body>
@@ -21,7 +20,7 @@
           <a class="nav-link Home" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Blog" href="/blog">Blog</a>
+          <a class="nav-link Blog" href="/blog/home">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link Dashboard" href="/dashboard">Dashboard</a>
@@ -29,26 +28,44 @@
         <li class="nav-item">
           <a class="nav-link Projects" href="/projects">Projects</a>
         </li>
+        {% if g.user %}
+          <li class="nav-item">
+            <span class="nav-link">{{ g.user['username'] }}</span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+          </li>
+        {% endif %}
       </ul>
     </header>
     <main class="container p-5">
       {% block main %}{% endblock %}
+      {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+      {% endfor %}
     </main>
     <footer>
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link Github" href="https://github.com/tylermcgraw/">
-            <img id="github-img" src="static/github-logo.png" alt="github link and image">
+            <img id="github-img" src="{{ url_for('static', filename='github-logo.png') }}" alt="github link and image">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link Email" href="mailto:tyler.a.mcgraw@gmail.com">
-            <img id="email-img" src="static/email-icon.jpg" alt="email link and image">
+            <img id="email-img" src="{{ url_for('static', filename='email-icon.jpg') }}" alt="email link and image">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link LinkedIn" href="https://www.linkedin.com/in/tyler-mcgraw-91a709128/">
-            <img id="linkedin-img" src="static/linkedin-logo.png" alt="linkedin link and image">
+            <img id="linkedin-img" src="{{ url_for('static', filename='linkedin-logo.png') }}" alt="linkedin link and image">
           </a>
         </li>
       </ul>
