Using spotipy instead of manually interacting with Spotify's API

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,9 +7,9 @@
 {% block main %}
   <h1 class="center">Hello, world.</h1>
   <p class="indent">
-    My name is Tyler McGraw. A bit about me - I was born and raised in Silicon Valley and graduated from Washington University in St. Louis in 2020 with a major in Philosophy - Neuroscience - Psychology and a minor in Computer Science. In my free time I enjoy lifting heavy things, watching NBA and <a href="https://youtu.be/EjvcAabE-jM?t=186">Sumo wrestling</a>, and reading books and blogs.
+    My name is Tyler McGraw. A bit about me - I was born and raised in Silicon Valley and graduated from Washington University in St. Louis in 2020 with a major in Philosophy - Neuroscience - Psychology and a minor in Computer Science. In my free time I enjoy lifting heavy things, watching the NBA and <a href="https://youtu.be/EjvcAabE-jM?t=186">Sumo wrestling</a>, and reading books and blogs.
   </p>
   <p class="indent">
-    On this site you can find my blog, dashboard, and a collection of projects I have worked on. The blog doesn't focus on a specific topic, I will write about things that I've been thinking about/interest me. I find that thoughts that exist solely in my mind are not as well articulated as I think they are, so I will take a Montaigne-esque approach of writing essais (attempts) rather than proofs. The dashboard is mostly for personal use but I have made parts of it public. The projects section is self-explanatory and self-referential.
+    On this site you can find my blog, dashboard, and a collection of projects I have worked on. The blog doesn't focus on a specific topic, I will write about things that I've been thinking about/interest me. I find that thoughts that exist solely in my mind are not as well articulated as I think they are, so I will aim to convey rather than convince. I have several ideas for the dashboard including integrating with Spotify's API to show my top artists/albums. The projects section is self-explanatory and self-referential.
   </p>
 {% endblock %}
