fixed database storage of spotify data

--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -23,52 +23,40 @@
           <a class="nav-link Blog" href="{{ url_for('blog.home') }}">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Dashboard" href="{{ url_for('dashboard.home') }}">Dashboard</a>
+          <a class="nav-link Dashboard" href="{{ url_for('dashboard') }}">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link Projects" href="{{ url_for('projects') }}">Projects</a>
         </li>
-        {% if g.user %}
-          <li class="nav-item">
-            <span class="nav-link">{{ g.user['username'] }}</span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
-          </li>
-        {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
-          </li>
-        {% endif %}
+        {% block header %}{% endblock %}
       </ul>
     </header>
-    <main class="container p-5">
+    <main class="container">
       {% block main %}{% endblock %}
       {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
       {% endfor %}
     </main>
-    <footer>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link Github" href="https://github.com/tylermcgraw/">
-            <img id="github-img" src="{{ url_for('static', filename='github-logo.png') }}" alt="github link and image">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Email" href="mailto:tyler.a.mcgraw@gmail.com">
-            <img id="email-img" src="{{ url_for('static', filename='email-icon.jpg') }}" alt="email link and image">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link LinkedIn" href="https://www.linkedin.com/in/tyler-mcgraw-91a709128/">
-            <img id="linkedin-img" src="{{ url_for('static', filename='linkedin-logo.png') }}" alt="linkedin link and image">
-          </a>
-        </li>
-      </ul>
+    <footer class="footer mt-auto">
+      <div class="container">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link Github" href="https://github.com/tylermcgraw/">
+              <img id="github-img" src="{{ url_for('static', filename='github-logo.png') }}" alt="github link and image">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link Email" href="mailto:tyler.a.mcgraw@gmail.com">
+              <img id="email-img" src="{{ url_for('static', filename='email-icon.jpg') }}" alt="email link and image">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link LinkedIn" href="https://www.linkedin.com/in/tyler-mcgraw-91a709128/">
+              <img id="linkedin-img" src="{{ url_for('static', filename='linkedin-logo.png') }}" alt="linkedin link and image">
+            </a>
+          </li>
+        </ul>
+      </div>      
     </footer>
   </body>
 </html>
