--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -4,6 +4,24 @@
   Blog
 {% endblock %}
 
+{% block header %}
+  {% if g.user %}
+    <li class="nav-item">
+      <span class="nav-link">{{ g.user['username'] }}</span>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+    </li>
+    {% else %}
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+    </li>
+  {% endif %}
+{% endblock %}
+
 {% block main %}
   <h1>Posts</h1>
   {% if g.user %}
