--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -7,7 +7,7 @@
 {% block main %}
   <form method="post">
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input autocomplete="off" autofocus name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Register">
