--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -4,6 +4,17 @@
   Login
 {% endblock %}
 
+{% block header %}
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="{{ url_for('auth.login') }}">Log In</a>
+    </li>
+  </ul>
+{% endblock %}
+
 {% block main %}
   <form method="post">
     <label for="username">Username</label>
