--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -4,6 +4,26 @@
   Blog
 {% endblock %}
 
+{% block header %}
+  <ul class="navbar-nav">
+    {% if g.user %}
+      <li class="nav-item">
+        <span class="nav-link">{{ g.user['username'] }}</span>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+      </li>
+    {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      </li>
+    {% endif %}
+    </ul>
+{% endblock %}
+
 {% block main %}
   <h1>New Post</h1>
   <form method="post">
