--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -5,21 +5,23 @@
 {% endblock %}
 
 {% block header %}
-  {% if g.user %}
-    <li class="nav-item">
-      <span class="nav-link">{{ g.user['username'] }}</span>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
-    </li>
+  <ul class="navbar-nav">
+    {% if g.user %}
+      <li class="nav-item">
+        <span class="nav-link active">{{ g.user['username'] }}</span>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+      </li>
     {% else %}
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
-    </li>
-  {% endif %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      </li>
+    {% endif %}
+    </ul>
 {% endblock %}
 
 {% block main %}
