--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -15,21 +15,26 @@
   </head>
   <body>
     <header>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link Home" href="{{ url_for('index') }}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Blog" href="{{ url_for('blog.home') }}">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Dashboard" href="{{ url_for('dashboard') }}">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Projects" href="{{ url_for('projects') }}">Projects</a>
-        </li>
-        {% block header %}{% endblock %}
-      </ul>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" id="home" href="{{ url_for('index') }}">Tyler McGraw</a>
+          {% block header %}{% endblock %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" id="about" href="{{ url_for('about') }}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="blog" href="{{ url_for('blog.home') }}">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="dashboard" href="{{ url_for('dashboard') }}">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="projects" href="{{ url_for('projects') }}">Projects</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main class="container">
       {% block main %}{% endblock %}
