--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -28,7 +28,7 @@
   <h1>New Post</h1>
   <form method="post">
     <label for="title">Title</label>
-    <input name="title" id="title" value="{{ request.form['title'] }}" required>
+    <input autocomplete="off" autofocus name="title" id="title" value="{{ request.form['title'] }}" required>
     <label for="body">Body</label>
     <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
     <input type="submit" value="Save">
