Changed blog to allow users to comment on my posts, rather than make their own posts

--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -10,6 +10,6 @@
     My name is Tyler McGraw. I was born and raised in Silicon Valley and graduated from Washington University in St. Louis in 2020 with a major in Philosophy - Neuroscience - Psychology and a minor in Computer Science. 
   </p>
   <p class="indent">
-    Some of my hobbies include <a href="https://www.instagram.com/p/B512wA5nYNV/"><u>lifting heavy things</u></a>, <a href="https://lichess.org/@/Ender14123"><u>playing chess</u></a>, watching the Warriors dominate the NBA, and most recently following <a href="https://youtu.be/EjvcAabE-jM?t=186"><u>Sumo wrestling</u></a>. I also enjoy learning new things - in my free time I a voraciously consume books, blog posts, podcasts, and whatever else I can get my hands on.
+    Some of my hobbies include <a href="https://www.instagram.com/p/B512wA5nYNV/"><u>lifting heavy things</u></a>, <a href="https://lichess.org/@/Ender14123"><u>playing chess</u></a>, watching the Warriors dominate the NBA, and following <a href="https://youtu.be/EjvcAabE-jM?t=186"><u>Sumo wrestling</u></a>. I also enjoy learning new things - in my free time I voraciously consume books, blog posts, podcasts, and whatever else I can get my hands on.
   </p>
 {% endblock %}
