--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -7,10 +7,10 @@
 {% block header %}
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="{{ url_for('auth.register') }}">Register</a>
+      <a class="nav-link active" href="{{ url_for('auth.register', post='home') }}">Register</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      <a class="nav-link" href="{{ url_for('auth.login', post='home') }}">Log In</a>
     </li>
   </ul>
 {% endblock %}
