--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -11,14 +11,14 @@
         <span class="nav-link active">{{ g.user['username'] }}</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+        <a class="nav-link" href="{{ url_for('auth.logout', post='home') }}">Log Out</a>
       </li>
     {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+        <a class="nav-link" href="{{ url_for('auth.register', post='home') }}">Register</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+        <a class="nav-link" href="{{ url_for('auth.login', post='home') }}">Log In</a>
       </li>
     {% endif %}
     </ul>
