--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -14,7 +14,7 @@
     <title>Tyler McGraw - {% block title %}{% endblock %}</title>
   </head>
   <body>
-    <header>
+    <header class="mb-3">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" id="home" href="{{ url_for('index') }}">Tyler McGraw</a>
@@ -37,10 +37,10 @@
       </nav>
     </header>
     <main class="container">
-      {% block main %}{% endblock %}
       {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
       {% endfor %}
+      {% block main %}{% endblock %}
     </main>
     <footer class="footer mt-auto">
       <div class="container">
