--- a/flaskr/templates/projects.html
+++ b/flaskr/templates/projects.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
+  <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col">
       <div class="card text-dark bg-light mb-3 h-100">
         <a href="/">
