Added layout for posts

--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -26,4 +26,6 @@
 
 {% block main %}
   <a class="nav-link" href="{{ url_for('blog.post', post='genesis') }}">Genesis</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}">On <em>The Secret of Our Success</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}">On <em>Zero to One</em></a>
 {% endblock %}
