--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,6 +7,6 @@
 {% block main %}
   <h1 class="center">Hello, world.</h1>
   <p class="indent">
-    On this site you can find my blog, dashboard, and a collection of projects I have worked on. The blog doesn't focus on a specific topic, I will write about things that I've been thinking about/interest me. I find that thoughts that exist solely in my mind are not as well articulated as I think they are, so I will aim to convey rather than convince. The dashboard shows my top Spotify artists and albums as well as books on my Goodreads list. The projects section is self-explanatory and self-referential.
+    On this site you can find my blog, dashboard, and a collection of projects I have worked on. The blog doesn't focus on a specific topic, I will write about things that I've been thinking about/interest me. The dashboard shows my top Spotify artists and albums as well as books on my Goodreads list. The projects section is self-explanatory and self-referential.
   </p>
 {% endblock %}
