--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -29,4 +29,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}">On <em>The Secret of Our Success</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}">On <em>Zero to One</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">On <em>Fast, Cheap, and Out of Control</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}">On <em>Alice, Gilgamesh, </em>and <em>Range</em></a>
 {% endblock %}
