--- a/flaskr/templates/blog/posts/fast_cheap_out_of_control.html
+++ b/flaskr/templates/blog/posts/fast_cheap_out_of_control.html
@@ -28,6 +28,6 @@
 </p>
 <q>[The lions] don't consider themselves caged, outside the cage is the cage</q>
 <p>- Dave Hoover</p>
-<q>To an observer it appears the robot has intentions and has goals and is following people and chasing prey, but its just the interaction of lots and lots of much simpler processes</q>
+<q>To an observer it appears the robot has intentions and has goals and is following people and chasing prey, but it's just the interaction of lots and lots of much simpler processes</q>
 <p>- Rodney Brooks</p>
 {% endblock %}
