--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -30,4 +30,6 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}">On <em>Zero to One</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">On <em>Fast, Cheap, and Out of Control</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}">On <em>Alice, Gilgamesh, </em>and <em>Range</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
 {% endblock %}
