--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -32,4 +32,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}">On <em>Alice, Gilgamesh, </em>and <em>Range</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='kings_gambit') }}">A Nice King's Gambit Accepted Game</a>
 {% endblock %}
