--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -33,4 +33,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='kings_gambit') }}">A Nice King's Gambit Accepted Game</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}">On <em>The Second Mountain</em></a>
 {% endblock %}
