New post, updated titles of old posts

--- a/flaskr/templates/blog/posts/alice_gilgamesh_range.html
+++ b/flaskr/templates/blog/posts/alice_gilgamesh_range.html
@@ -1,6 +1,6 @@
 {% extends "post.html" %}
 {% block post %}
-<h1>On <em>Alice, Gilgamesh,</em> and <em>Range</em></h1>
+<h1><em>Alice's Adventures in Wonderland, The Epic of Gilgamesh,</em> and <em>Range</em></h1>
 <p>10/17/21</p>
 <h2><em>Alice's Adventures in Wonderland</em></h2>
 <p>
