--- a/flaskr/templates/blog/posts/fast_cheap_out_of_control.html
+++ b/flaskr/templates/blog/posts/fast_cheap_out_of_control.html
@@ -1,6 +1,6 @@
 {% extends "post.html" %}
 {% block post %}
-<h1>On <em>Fast, Cheap, and Out of Control</em></h1>
+<h1>Errol Morris' <em>Fast, Cheap, and Out of Control</em></h1>
 <p>10/13/21</p>
 <p>
     <a href="https://www.imdb.com/title/tt0119107/?ref_=nv_sr_srsg_1"><em>Fast, Cheap, and Out of Control</em></a> is a documentary about a lion trainer, a topiary gardener, a naked mole-rat specialist, and a robot scientist, but it spoke to me on larger topics such as purpose, control, and being in the world. I found it to be a pleasurable viewing experience and unmistakably "Morrisian". This is not a review but rather an attempt to collect my thoughts and deposit them in one place.
