--- a/flaskr/templates/blog/posts/zero_to_one.html
+++ b/flaskr/templates/blog/posts/zero_to_one.html
@@ -1,7 +1,7 @@
 {% extends "post.html" %}
 
 {% block post %}
-<h1>On <em>Zero to One</em></h1>
+<h1><em>Zero to One</em> by Peter Thiel</h1>
 <p>10/9/21</p>
 <p>
     Peter Thiel's <a href="https://www.goodreads.com/book/show/18050143-zero-to-one"><em>Zero to One: Notes on Startups, Or How to Build the Future</em></a> is, ostensibly, about how to create companies that build new things (or go from 0 to 1, to borrow Thiel's term of art). Of course, he can't tell you what exactly you need to do to create something new or else it would already exist, but he goes over the mindset, skills, and priorities you need to have to put yourself in a position to be a successful founder. There are plenty of unintuitive and contrarian points - just look at the names of some of the chapters: All Happy Companies are Different, Last Mover Advantage, If You Build it, Will They Come? To Thiel, contrarian thought is the only unique thought. And unique thought is in short supply these days if you are to believe Thiel's claims about current US indefinite optimism (a future which we have no control over) or Chinese and European pessimism.
