--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -26,12 +26,13 @@
 
 {% block main %}
   <a class="nav-link" href="{{ url_for('blog.post', post='genesis') }}">Genesis</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}">On <em>The Secret of Our Success</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}">On <em>Zero to One</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">On <em>Fast, Cheap, and Out of Control</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}">On <em>Alice, Gilgamesh, </em>and <em>Range</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}"><em>The Secret of Our Success</em> by Joseph Henrich</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}"><em>Zero to One</em> by Peter Thiel</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">Errol Morris' <em>Fast, Cheap, and Out of Control</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}"><em>Alice's Adventures in Wonderland, The Epic of Gilgamesh, </em>and <em>Range</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='kings_gambit') }}">A Nice King's Gambit Accepted Game</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}">On <em>The Second Mountain</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}"><em>The Second Mountain</em> by David Brooks</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em> by Michel Houellebecq</a>
 {% endblock %}
