New post, removed comments and login

--- a/flaskr/templates/blog/posts/charity_opportunity_cost.html
+++ b/flaskr/templates/blog/posts/charity_opportunity_cost.html
@@ -23,6 +23,6 @@
     </ol>
 </p>
 <p>
-    I'm not confident enough to make that stronger argument but it's something I've been thinking about. On the flip side, there are obivously other reasons for saving your money than to make a large donation. My thinking comes from a place of privilege and I wouldn't want to guilt anyone who doesn't have any savings into donating all of their money instead of saving and investing it.
+    I'm not confident enough to make that stronger argument but it's something I've been thinking about. On the flip side, there are obviously other reasons for saving your money than to make a large donation. My thinking comes from a place of privilege and I wouldn't want to guilt anyone who doesn't have any savings into donating all of their money instead of saving and investing it.
 </p>
 {% endblock %}
