--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -4,26 +4,6 @@
   Blog
 {% endblock %}
 
-{% block header %}
-  <ul class="navbar-nav">
-    {% if g.user %}
-      <li class="nav-item">
-        <span class="nav-link active">{{ g.user['username'] }}</span>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.logout', post='home') }}">Log Out</a>
-      </li>
-    {% else %}
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.register', post='home') }}">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.login', post='home') }}">Log In</a>
-      </li>
-    {% endif %}
-    </ul>
-{% endblock %}
-
 {% block main %}
   <a class="nav-link" href="{{ url_for('blog.post', post='genesis') }}">Genesis</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}"><em>The Secret of Our Success</em> by Joseph Henrich</a>
@@ -32,7 +12,7 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}"><em>Alice's Adventures in Wonderland, The Epic of Gilgamesh, </em>and <em>Range</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='kings_gambit') }}">A Nice King's Gambit Accepted Game</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}"><em>The Second Mountain</em> by David Brooks</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em> by Michel Houellebecq</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">5 Movies</a>
 {% endblock %}
