--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -14,5 +14,6 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}"><em>The Second Mountain</em> by David Brooks</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em> by Michel Houellebecq</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">5 Movies</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">What I've been watching: <em>300, Dune, Breakfast at Tiffany's, The French Dispatch, </em>and <em>Gone with the Wind</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='aesthetics_restraint') }}">On the Aesthetics of Restraint</a>
 {% endblock %}
