--- a/flaskr/templates/blog/posts/movies.html
+++ b/flaskr/templates/blog/posts/movies.html
@@ -1,6 +1,6 @@
 {% extends "post.html" %}
 {% block post %}
-<h1>5 Movies</h1>
+<h1>What I've been watching: <em>300, Dune, Breakfast at Tiffany's, The French Dispatch, </em>and <em>Gone with the Wind</em></h1>
 <p>11/8/21</p>
 <h2>
     <em>300</em>
