--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -16,4 +16,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em> by Michel Houellebecq</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">What I've been watching: <em>300, Dune, Breakfast at Tiffany's, The French Dispatch, </em>and <em>Gone with the Wind</em></a>
   <a class="nav-link" href="{{ url_for('blog.post', post='aesthetics_restraint') }}">On the Aesthetics of Restraint</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='books_late_2021') }}">Books of Late 2021</a>
 {% endblock %}
