--- a/flaskr/templates/blog/posts/books_late_2021.html
+++ b/flaskr/templates/blog/posts/books_late_2021.html
@@ -6,7 +6,7 @@
     I am currently reading Jordan Peterson’s <i>12 Rules for Life</i>, Gustave Flaubert’s <i>Madame Bovary</i>, Isaac Asimov’s <i>Chronology of the World</i> and <i>Breakthroughs in Science</i>, Dickens’ <i>A Christmas Carol</i>, Edith Hamilton’s <i>Mythology</i>, and Richard Prum’s <i>The Evolution of Beauty</i>. Adam Smith’s <i>Wealth of Nations</i> and Cesare Becaria’s <i>On Crimes and Punishments</i> are on the backburner for now.
 </p>
 <p>
-    Since finishing Kierkegaard’s Either/Or in November I have read several books and short stories:
+    Since finishing Kierkegaard’s <i>Either/Or</i> in November I have read several books and short stories:
 </p>
 <p>
     <h2><em>A Man Without Words</em> by Susan Schaller</h2>
