--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -18,4 +18,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='aesthetics_restraint') }}">On the Aesthetics of Restraint</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='books_late_2021') }}">Books of Late 2021</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='movies_late_2021') }}">Movies of Late 2021</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='jacobs_ladder') }}">Jacob's Ladder (1990)</a>
 {% endblock %}
