--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -19,4 +19,5 @@
   <a class="nav-link" href="{{ url_for('blog.post', post='books_late_2021') }}">Books of Late 2021</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='movies_late_2021') }}">Movies of Late 2021</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='jacobs_ladder') }}">Jacob's Ladder (1990)</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='evolution_beauty') }}"><em>The Evolution of Beauty</em>, by Richard O. Prum</a>
 {% endblock %}
