--- a/flaskr/templates/blog/posts/evolution_beauty.html
+++ b/flaskr/templates/blog/posts/evolution_beauty.html
@@ -30,7 +30,8 @@
     This is different from saying that penises cannot evolve in the first place. The reason is that the devolution of a penis involves a significant amount of female mate choice, and once the penis is gone males lack the leverage to coerce females. Females prefer males without penises because it affords them more power over their mating choices, and so the penis will not reemerge. The fact that not a single descendant of the Neoaves has re-evolved a penis is evidence for this claim.
 </p>
 <p>
-    Corollary: The human penis will not devolve.<br>
+    Corollary:<br>
+    The human penis will not devolve.<br>
     Given the previous prediction and the fact that we live in an egalitarian society, one might expect the human penis to eventually devolve as females prefer small penises to reduce the chance of sexual coercion, but there are aesthetic reasons for its presence. 
 </p>
 <p>
