--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -5,20 +5,21 @@
 {% endblock %}
 
 {% block main %}
-  <a class="nav-link" href="{{ url_for('blog.post', post='genesis') }}">Genesis</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}"><em>The Secret of Our Success</em> by Joseph Henrich</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}"><em>Zero to One</em> by Peter Thiel</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">Errol Morris' <em>Fast, Cheap, and Out of Control</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}"><em>Alice's Adventures in Wonderland, The Epic of Gilgamesh, </em>and <em>Range</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}"><em>The Second Mountain</em> by David Brooks</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em> by Michel Houellebecq</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">What I've been watching: <em>300, Dune, Breakfast at Tiffany's, The French Dispatch, </em>and <em>Gone with the Wind</em></a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='aesthetics_restraint') }}">On the Aesthetics of Restraint</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='books_late_2021') }}">Books of Late 2021</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='movies_late_2021') }}">Movies of Late 2021</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='jacobs_ladder') }}">Jacob's Ladder (1990)</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='machine_stops') }}"><em>The Machine Stops</em>, by E.M. Forster</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='stubborn_attachments') }}"><em>Stubborn Attachments</em>, by Tyler Cowen</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='evolution_beauty') }}"><em>The Evolution of Beauty</em>, by Richard O. Prum</a>
-  <a class="nav-link" href="{{ url_for('blog.post', post='evolution_beauty') }}"><em>Stubborn Attachments</em>, by Tyler Cowen</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='jacobs_ladder') }}">Jacob's Ladder (1990)</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='movies_late_2021') }}">Movies of Late 2021</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='books_late_2021') }}">Books of Late 2021</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='aesthetics_restraint') }}">On the Aesthetics of Restraint</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='movies') }}">What I've been watching: <em>300, Dune, Breakfast at Tiffany's, The French Dispatch, </em>and <em>Gone with the Wind</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='submission') }}"><em>Submission</em>, by Michel Houellebecq</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='second_mountain') }}"><em>The Second Mountain</em>, by David Brooks</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='protein_sources') }}">Vegan Protein Sources</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='charity_opportunity_cost') }}">Charitable Opportunity Costs</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='alice_gilgamesh_range') }}"><em>Alice's Adventures in Wonderland, The Epic of Gilgamesh, </em>and <em>Range</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='fast_cheap_out_of_control') }}">Errol Morris' <em>Fast, Cheap, and Out of Control</em></a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='zero_to_one') }}"><em>Zero to One</em>, by Peter Thiel</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='secret_of_our_success') }}"><em>The Secret of Our Success</em>, by Joseph Henrich</a>
+  <a class="nav-link" href="{{ url_for('blog.post', post='genesis') }}">Genesis</a>
 {% endblock %}
