--- a/flaskr/templates/blog/posts/secret_of_our_success.html
+++ b/flaskr/templates/blog/posts/secret_of_our_success.html
@@ -1,7 +1,7 @@
 {% extends "post.html" %}
 
 {% block post %}
-<h1><em>The Secret of Our Success</em> by Joseph Henrich</h1>
+<h1><em>The Secret of Our Success</em>, by Joseph Henrich</h1>
 <p>10/7/21</p>
 <p>
   Joseph Henrich's <a href="https://www.goodreads.com/book/show/25761655-the-secret-of-our-success"><em>The Secret of Our Success: How Culture is Driving Human Evolution, Domesticating Our Species, and Making Us Smarter</em></a> is one of those books that gets brought up so often by people I respect that I knew it was inevitable I would eventually read it. I thought I'd jot down my key takeaways from memory (it's been about a week since I finished) to 1. help me encode what I learned and 2. give me something to look back upon when the details start to get hazy.
