--- a/flaskr/templates/blog/posts/submission.html
+++ b/flaskr/templates/blog/posts/submission.html
@@ -1,7 +1,7 @@
 {% extends "post.html" %}
 
 {% block post %}
-<h1><em>Submission</em> by Michel Houellebecq</h1>
+<h1><em>Submission</em>, by Michel Houellebecq</h1>
 <p>11/2/21</p>
 <p>
     Michel Houellebecq's <em>Submission</em> gives the first person perspective of Francois, a professor living through the election of France's first Islamic president. The novel has been accused of sexism, Islamophobia, and playing on popular fears in Europe, the last of which Houellebecq himself has admitted ("Yes... I use scare tactics"). I think the Islamophobic charges miss the point of <em>Submission</em> however - I read Houellebecq as critiquing Western enlightenment values, and while I don't think he is pro-Islam per se he definitely sees it as an improvement. As for the sexism, well, in my reading he is clearly guilty, but he is not a misogynist. That is, he isn't prejudiced against women, he just doesn't believe that they should be treated the same as men. He rejects feminism on the ground that it is simply unsustainable from a demographic point of view and portrays women as being more fulfilled and happy after the Islamization of society.
