--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+  <a class="nav-link" href="{{ url_for('blog.post', post='crimes_punishments') }}"><em>On Crimes and Punishments</em>, by Cesare Beccaria</a> 
   <a class="nav-link" href="{{ url_for('blog.post', post='top_albums') }}">Top 10 Albums of All Time</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='machine_stops') }}"><em>The Machine Stops</em>, by E.M. Forster</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='stubborn_attachments') }}"><em>Stubborn Attachments</em>, by Tyler Cowen</a>
